--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escola Zelo</title>
-<img src="LOGO EM SVG.png" alt="LOGO EM SVG.png">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="estilos.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+
 <body>
-  <div id="app"></div>
+  <div style="text-align:center; padding:16px;">
+    <img src="LOGO%20EM%20SVG.png" alt="Logo Escola Zelo" style="max-width:180px; height:auto;" />
+  </div>
+
+  <div id="aplicativo"></div>
+
   <script src="app.js"></script>
 </body>
 </html>
