--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escola Zelo</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
-
-<body>
-  <div style="text-align:center; padding:16px;">
-    <img src="LOGO%20EM%20SVG.png" alt="Logo Escola Zelo" style="max-width:180px; height:auto;" />
-  </div>
-
-  <div id="aplicativo"></div>
-
-  <script src="app.js"></script>
-</body>
-</html>
