--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escola Zelo</title>
-<img src="assets/LOGO EM SVG.png" alt="LOGO EM SVG.png" style="width:200px;">
-  <link rel="stylesheet" href="styles.css" />
+
+  <link rel="stylesheet" href="estilos.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+
 <body>
-  <div id="app"></div>
+
+  <div style="text-align:center; padding:20px;">
+    <img src="logo.png" alt="Logo Escola Zelo" style="width:200px;">
+  </div>
+
+  <div id="aplicativo"></div>
+
   <script src="app.js"></script>
+
 </body>
 </html>
