--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escola Zelo</title>
-
   <link rel="stylesheet" href="estilos.css">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
-
 <body>
 
   <div style="text-align:center; padding:20px;">
     <img src="logo.png" alt="Logo Escola Zelo" style="width:200px;">
   </div>
 
+  <!-- IMPORTANTE: esse ID tem que ser o mesmo que o app.js usa -->
   <div id="aplicativo"></div>
 
   <script src="app.js"></script>
-
 </body>
 </html>
